# DoubleTake

./: .clang-format  .gitignore  LICENSE.txt  Makefile  README.md  aliveobjects.h  atomic.h  bitmap.cpp  bitmap.h  common.mk  dlmalloc.c  dummy.h  elf.h  elfanalysis.h  finetime.h  fops.h  freelist.h  globalinfo.h  hashmap.h  heapowner.h  internalheap.h  internalsyncs.cpp  internalsyncs.h  leakcheck.cpp  leakcheck.h  libfuncs.cpp  libfuncs.h  libstopgap.cpp  log.h  mm.h  objectheader.h  objectmap.h  privateheap.h  quarantine.h  record.h  recordentries.h  regioninfo.h  sanitycheck.h  selfmap.h  semaphore.h  (+32 more)
heaplayers/: freelistheap.h  mmapheap.h  segheap.h  zoneheap.h
heaplayers/heaps/combining/: segheap.h  strictsegheap.h
heaplayers/heaps/special/: zoneheap.h
heaplayers/wrappers/: ansiwrapper.h  wrapper.cpp
include/: ChainedHashMap.h  atomic.h  bitmap.h  bitmap.hh  bumpalloc.h  callsite.h  callsite.hh  compat.hh  doubletake.hh  dr.h  finetime.h  fops.h  fops.hh  freelist.h  globalinfo.h  globalinfo.hh  hashfuncs.h  hashfuncs.hh  hashmap.h  hashmap.hh  hopscotch.h  internalheap-modify.h  internalheap.h  internalheap.hh  internalsyncs.h  internalsyncs.hh  interval.h  interval.hh  leakcheck.h  leakcheck.hh  libfuncs.h  list.h  list.hh  log.h  log.hh  memtrack.h  memtrack.hh  mm.h  mm.hh  objectheader.h  (+57 more)
old_test/: Makefile  global.cpp  malloc.cpp  run.sh
source/: Makefile  dr.c  dr.cpp  finetime.c  gnuwrapper.cpp  internalsyncs.cpp  leakcheck.cpp  libdoubletake.cpp  libfuncs.cpp  log.cpp  memtrack.cpp  quarantine.cpp  real.cpp  rollback_amd64.s  runtime.cpp  selfmap.cpp  syscalls.cpp  tempmalloc.cpp  test_hashmap.cpp  thread.cpp  watchpoint.cpp  xcontext.cpp  xmemory.cpp  xrun.cpp  xthread.cpp
synchtest/: Makefile  barrier.cpp  embarrassing.cpp  malloc.cpp  mmap.cpp  opendir.cpp  single.cpp  test-bak.cpp  test-nestlock.cpp  test.cpp  test1.cpp  test10.cpp  test11.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  test_cancel.cpp  test_psharecond.cpp  test_psharecond2.cpp  testheap.cpp  testmalloc.cpp  thread.cpp
test/: Makefile  cplusplus.cpp  log  malloc.cpp  malloc2.cpp  mmap.cpp  mylog  random.cpp  random2.cpp
tests/: Makefile  build.mk
tests/SAMATE/overflow/: HeapOverFlow_ArrayAddress_bad_1958.cpp  HeapOverFlow_ArrayAddress_bad_2064.cpp  HeapOverFlow_ArrayIndex_bad1_2065.cpp  HeapOverFlow_ArrayIndex_bad_1961.cpp  HeapOverFlow_Scope_bad_1955.cpp  HeapOverFlow_Scope_bad_2063.cpp  HeapOverFlow_bad_1952.cpp  HeapOverFlow_bad_2062.cpp  HeapOverFlow_good_2134.c  HeapOverflow_ArrayAddress_good_1959.cpp  HeapOverflow_ArrayAddress_good_2068.cpp  HeapOverflow_Scope_good_2067.cpp  HeapOverflow_good_1953.cpp  HeapOverflow_good_2066.cpp  Heap_overflow_15.cpp  Makefile  Makefile.asan  compilelog  heap_overflow_array_953.cpp  heap_overflow_array_good_959.cpp  heap_overflow_basic_good_1936.cpp  heap_overflow_cplx_1845.c  heap_overflow_cplx_2145.c  heap_overflow_cplx_good_1846.c  heap_overflow_cplx_good_2149.c  heap_overflow_location_2147.c  heap_overflow_location_good_2148.c  run.sh  runbad.sh  rungood.sh
tests/multithreading/phoenixparsec/: run.py  run_benchmarks.py  run_new.py  runmem.py
tests/realapplications/libHX_overflow/libHX-3.4/: .gitignore  COPYING  Makefile.am  README.txt  configure.ac  libHX.pc.in
tests/realapplications/libHX_overflow/libHX-3.4/assorted/: deque2.c  pack.c  tofrac.c
tests/realapplications/libHX_overflow/libHX-3.4/doc/: Makefile.am  assorted.txt  changelog.txt  generate  libHX_Documentation.lyx  other.txt  repo-notes.txt  ux-file.txt  ux-mmap.txt
tests/realapplications/libHX_overflow/libHX-3.4/m4/: gcc4_visibility.m4
tests/realapplications/libHX_overflow/libHX-3.4/src/: .gitignore  Makefile.am  deque.c  dir.c  dl.c  format.c  internal.h  map.c  map_int.h  mc.c  misc.c  opt.c  proc.c  rand.c  string.c  tc-cast.c  tc-compile.c  tc-deque.c  tc-dir.c  tc-list.c  tc-map.c  tc-misc.c  tc-option.c  tc-proc.c  tc-rand.c  tc-string.c  tc-time.c  time.c  tx-cast.cpp  tx-compile.cpp  tx-deque.cpp  tx-dir.cpp  tx-list.cpp  tx-misc.cpp  tx-option.cpp  tx-proc.cpp  tx-rand.cpp  tx-string.cpp  tx-time.cpp  ux-file.c  (+2 more)
tests/realapplications/libHX_overflow/libHX-3.4/src/include/: Makefile.am  libHX.h
tests/realapplications/libHX_overflow/libHX-3.4/src/include/libHX/: ctype_helper.h  defs.h  deque.h  init.h  libxml_helper.h  list.h  map.h  misc.h  option.h  proc.h  string.h  wx_helper.hpp
tests/simple_leak/: Makefile  main.c
tests/simple_mt_uaf/: main.c
tests/simple_overflow/: Makefile  main.c  main.cpp  overflow.cpp  run.sh
tests/simple_uaf/: Makefile  main.c
tests/simple_uaf_cxx/: main.cc
tests/simpletest/: Makefile  leak.cpp  leak1.cpp  leak2.cpp  leak3.cpp  leak4.cpp  leak5.cpp  leak7.cpp  malloc.cpp  noleak1.cpp  noleak2.cpp  overflowandleak.cpp
tests/unit/: bitmap.cpp  build.mk  gtest_main.cpp
verify/fopen/: Makefile  leak1.cpp
verify/open/: Makefile  leak1.cpp
verify/preload/: Makefile  override.c  test.c
verify/printf/: Makefile  test.c
(+128 files in other folders)
